stm32wl_ds18b20_temp/.metadata/.plugins/org.eclipse.cdt.ui/STM32f401_temp_lib.build.log
14:59:16 **** Incremental Build of configuration Debug for project STM32f401_temp_lib ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/Admin/Desktop/Test project/stm32wl_ds18b20/STM32f401_temp_lib/ds18b20" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:21:
C:/Users/Admin/Desktop/Test project/stm32wl_ds18b20/STM32f401_temp_lib/ds18b20/ds18b20.h:31:1: error: unknown type name 'class'
   31 | class DS18B20
      | ^~~~~
C:/Users/Admin/Desktop/Test project/stm32wl_ds18b20/STM32f401_temp_lib/ds18b20/ds18b20.h:32:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   32 | {
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

14:59:17 Build Failed. 3 errors, 0 warnings. (took 239ms)

